[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/tools.png" type="Texture" id=1]
[ext_resource path="res://UI/LilitaOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Shop/ShopInterface.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[node name="ShopInterface" type="Node2D"]
script = ExtResource( 3 )

[node name="Panel2" type="Panel" parent="."]
margin_left = 45.0
margin_top = 69.0
margin_right = 169.0
margin_bottom = 109.0
custom_styles/panel = SubResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_right = 214.0
margin_bottom = 81.0
custom_styles/panel = SubResource( 1 )

[node name="MoneyLabel" type="Label" parent="."]
margin_left = 52.0
margin_top = 85.0
margin_right = 105.0
margin_bottom = 104.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Money:"

[node name="Bait" type="Sprite" parent="."]
position = Vector2( 48, 31 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 6
frame = 4

[node name="Label" type="Label" parent="Bait"]
margin_left = -19.5
margin_top = 4.5
margin_right = 20.5
margin_bottom = 23.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "$300"
align = 1

[node name="TextureButton" type="TextureButton" parent="Bait"]
margin_left = -11.0
margin_top = -8.0
margin_right = 10.0
margin_bottom = 17.0

[node name="Bait2" type="Sprite" parent="."]
position = Vector2( 167, 31 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 6
frame = 5

[node name="Label2" type="Label" parent="Bait2"]
margin_left = -20.5
margin_top = 5.0
margin_right = 19.5
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "$400"
align = 1

[node name="TextureButton2" type="TextureButton" parent="Bait2"]
margin_left = -12.0
margin_top = -9.5
margin_right = 9.0
margin_bottom = 15.5

[connection signal="pressed" from="Bait/TextureButton" to="." method="_on_BaitTextureButton_pressed"]
[connection signal="pressed" from="Bait2/TextureButton2" to="." method="_on_FlowerTextureButton_pressed"]
